WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167249
Land the stochastic space-time scheduler disabled
https://bugs.webkit.org/show_bug.cgi?id=167249
Summary
Land the stochastic space-time scheduler disabled
Filip Pizlo
Reported
2017-01-20 12:56:40 PST
Patch forthcoming.
Attachments
the patch
(28.68 KB, patch)
2017-01-20 13:06 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
more
(36.42 KB, patch)
2017-01-21 11:17 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(38.90 KB, patch)
2017-01-22 19:23 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-01-20 13:06:53 PST
Created
attachment 299370
[details]
the patch
WebKit Commit Bot
Comment 2
2017-01-20 13:08:47 PST
Attachment 299370
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/StochasticSpaceTimeMutatorScheduler.cpp:106: Declaration has space between type name and * in constraintExecutionDuration * m_pauseScale [whitespace/declaration] [3] ERROR: Source/JavaScriptCore/heap/Heap.cpp:58: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2017-01-21 11:17:57 PST
Created
attachment 299436
[details]
more Having tuned it I'm seeing some wins but now I need to verify that I didn't break perf of the old scheduler. I sorta want to land with the new scheduler disabled because I had to make other changes and I want to make sure that those changes don't mess anything up.
Filip Pizlo
Comment 4
2017-01-22 19:23:03 PST
Created
attachment 299491
[details]
the patch
WebKit Commit Bot
Comment 5
2017-01-22 19:25:43 PST
Attachment 299491
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/StochasticSpaceTimeMutatorScheduler.cpp:106: Declaration has space between type name and * in constraintExecutionDuration * m_pauseScale [whitespace/declaration] [3] ERROR: Source/JavaScriptCore/heap/Heap.cpp:58: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 6
2017-01-23 15:43:47 PST
Comment on
attachment 299491
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299491&action=review
r=me
> Source/JavaScriptCore/heap/StochasticSpaceTimeMutatorScheduler.cpp:2 > + * Copyright (C) 2016-2017 Apple Inc. All rights reserved.
2017
> Source/JavaScriptCore/heap/StochasticSpaceTimeMutatorScheduler.h:2 > + * Copyright (C) 2016-2017 Apple Inc. All rights reserved.
2017
Filip Pizlo
Comment 7
2017-01-23 16:02:43 PST
Landed in
https://trac.webkit.org/changeset/211069
Radar WebKit Bug Importer
Comment 8
2017-01-24 13:58:49 PST
<
rdar://problem/30173274
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug